# ChangeLog for app-misc/gramps
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gramps/ChangeLog,v 1.15 2004/03/15 01:19:59 weeve Exp $

  14 Mar 2004; Jason Wever <weeve@gentoo.org> gramps-1.0.0.ebuild:
  Added ~sparc keyword.

*gramps-1.0.0 (14 Feb 2004)

  14 Feb 2004; Alastair Tse <liquidx@gentoo.org> gramps-0.9.2.ebuild,
  gramps-0.9.3.ebuild, gramps-0.9.4.ebuild, gramps-1.0.0.ebuild:
  version bump

*gramps-0.99 (11 Feb 2004)

  11 Feb 2004; Lisa Seelye <lisa@gentoo.org> gramps-0.99.ebuild:
  version bump.. lets hope this cures bug #30112 !

*gramps-0.9.4 (01 Oct 2003)

  01 Oct 2003; Lisa Seelye <lisa@gentoo.org> gramps-0.9.4.ebuild:
  Version bump, to resolve bug 29895

  02 Sep 2003; Alastair Tse <liquidx@gentoo.org> gramps-0.9.3.ebuild:
  added pygtk glade detection

*gramps-0.9.3 (13 Aug 2003)

  13 Aug 2003; Mike Gardiner <obz@gentoo.org> gramps-0.9.3.ebuild:
  Version bump, added scrollkeeper to depends

  09 Jul 2003; Alastair Tse <liquidx@gentoo.org> gramps-0.9.1.ebuild,
  gramps-0.9.2.ebuild:
  added pkgconfig dep, cleanup

  04 Jul 2003; Alastair Tse <liquidx@gentoo.org> gramps-0.9.1.ebuild,
  gramps-0.9.2.ebuild:
  moved dev-python/ReportLab to dev-python/reportlab

*gramps-0.9.2 (02 Jun 2003)

  02 Jun 2003; Alastair Tse <liquidx@gentoo.org> gramps-0.9.2.ebuild:
  version bump and deps touchup

*gramps-0.9.1 (23 Apr 2003)

  23 Apr 2003; Alastair Tse <liquidx@gentoo.org> gramps-0.9.1.ebuild:
  version bump. gnome2-ize menu shortcut location

*gramps-0.9.0 (30 Mar 2003)

  30 Mar 2003; foser <foser@gentoo.org> gramps-0.9.0.ebuild :
  New version, now uses gtk2
  Adapted to gnome2 eclass

*gramps-0.8.0 (6 Sep 2002)
  6 Sep 2002; Jon Nelson <jnelson@gentoo.org> gramps-0.8.0.ebuild :
  new upstream package

*gramps-0.7.0 (1 Feb 2002)
  27 Aug 2002; Spider <spider@gentoo.org> gramps-0.7.0.ebuild :