@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/gramps
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gramps/ChangeLog,v 1.15 2004/03/15 01:19:59 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gramps/ChangeLog,v 1.16 2004/04/02 01:56:18 pylon Exp $
+
+*gramps-1.0.1 (02 Apr 2004)
+
+  02 Apr 2004; Lars Weiler <pylon@gentoo.org> gramps-1.0.1.ebuild:
+  Version bump and reported to be run on ppc (by Aymeric Nys).
 
   14 Mar 2004; Jason Wever <weeve@gentoo.org> gramps-1.0.0.ebuild:
   Added ~sparc keyword.
